# tapecrypt

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  abc.html  alphabetsrc.txt  anumlong.txt  config.status  configure  configure.ac  crypt  crypt2.cpp  decrypt  decrypt..bak.cpp  decrypt.cpp  decrypt.x  decrypt2.cpp  eee  makealphabet.sh  open.md  pak.md  pak.md.htmc  stranka.htmc  tailedit.sh  tap.txt  tape.txt  tapecrypt.spec  tst.md  tst1.htmc  vimcrypt.sh  vimmacroscompled.tmp  x1.htmc  x30  xxxx
.pc/patchii/: Makefile.am
.pc/patchii/examples/: Makefile.in
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: README.Debian  README.source  changelog  control  copyright  docs  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  tapecrypt.cron.d.ex  tapecrypt.default.ex  tapecrypt.doc-base.EX  tapecrypt.install  watch.ex
debian/patches/: init  patchii  series
doc/: Makefile  Makefile.in
examples/: Makefile  Makefile.in  tape.example  vimmacros.txt  x1.htmt  x100  xx.md.htmc
man/: Makefile  Makefile.in
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-generovani.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  Package-generovani.bash  configurations.xml  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml
scripts/: Makefile  Makefile.in  tailappend.sh  vimdecrypt.sh
segmentationFault/: kkkk.md.htmc
src/: Makefile.in  crypt.cpp  tapegenerator  tapegenerator.cpp
